# NFT

./: .gitignore  Cargo.toml  README.org
derive/: Cargo.toml
derive/src/: lib.rs
docs/: Technical Whitepaper - UncensoredGreats.docx
docs/frontend/: package-lock.json  predeploy.sh
docs/frontend/src/components/: Menu.tsx
docs/frontend/src/service/: icrc7.ts
examples/test_token/: Cargo.toml  Makefile  demo.sh
examples/test_token/.dfx/local/: canister_ids.json  network-id
examples/test_token/src/: lib.rs
frontend/: canister_ids.json  package.json
frontend/src/components/: Login.tsx
frontend/src/pages/: index.tsx
icp/: .env  Cargo.toml  dfx.json
icp/.dfx/local/: network-id
icp/.dfx/local/canisters/test_token/: constructor.did  service.did.d.ts  service.did.js  test_token.wasm
icp/icp-token/: Cargo.toml
icp/icp-token/icp-token-derive/src/: lib.rs
icp/icp-token/src/: lib.rs
icp/src/: lib.rs
nfts/: Cargo.toml  Makefile  README.org  README.tex  demo.sh  dfx.json
nfts/icp-token/icp-token/: Cargo.toml
nfts/icp-token/icp-token-derive/: Cargo.toml
nfts/src/icrc7/: Cargo.toml  icrc7.did
nfts/src/icrc7/icp-token/: Cargo.toml
nfts/src/icrc7/icp-token/icp-token-derive/: Cargo.toml
nfts/src/icrc7/icp-token/icp-token-derive/src/: lib.rs
nfts/src/icrc7/icp-token/icp-token/src/: lib.rs
nfts/src/icrc7/src/: guards.rs  init.rs  lib.rs  ll.rs  manage.rs  utils.rs
nfts/src/icrc7/src/memory/: approvals.rs  assets.rs  collection.rs  mod.rs  owner_tokens.rs  owners.rs  secret.rs  token.rs  transaction.rs
nfts/src/icrc7/src/query/: icrc37.rs  icrc61.rs  icrc7.rs  mod.rs
nfts/src/icrc7/src/types/: icrc37.rs  icrc7.rs  mod.rs
nfts/src/icrc7/src/update/: icrc37.rs  icrc7.rs  mod.rs
nfts/src/icrc7_derive/: Cargo.toml
nfts/src/icrc7_derive/src/: icrc37.rs  icrc7.rs  lib.rs  pret.rs
src/: lib.rs
test_token/: .env
tokenomics/: 1.sh  2.sh  Cargo.toml  README.md  canister_ids.json  dfx.json
tokenomics/src/token_transfer_backend/src/: lib.rs
(+4 files in other folders)
