[package]
name = "uncensored-greats-dao"
version = "0.1.0"
description = "ICRC implemenations"
authors = ["Roman <leshchuk.roma0524@gmail.com>"]
license = "Apache-2.0 License"
categories = ["Internet Computer", "NFC", "ICRC7"]
readme = "README.org"
repository = "https://github.com/UncensoredGreats/NFT"
homepage = "https://github.com/UncensoredGreats/NFT"
edition = "2021"

[dependencies]
candid = "0.10"
ciborium = "0.2"
ic-cdk = "0.13"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ic-cdk-timers = "0.7"
num-traits = "0.2"
sha3 = "0.10"
hmac = "0.12"
thiserror = "1"
serde_json = "1"

derive = {path = "./derive", version = "0.0.1"}
maplit = "1"
