[package]
description = "ICRC implemenations derive macroses"
authors = ["Roman <leshchuk.roma0524@gmail.com>"]
license = "Apache-2.0 License"
categories = ["Internet Computer", "NFC", "ICRC7"]
repository = "https://github.com/UncensoredGreats/NFT"
homepage = "https://github.com/UncensoredGreats/NFT"
name = "ugd-derive"
version = "0.1.0"
edition = "2021"

[features]
default = []

[lib]
name = "ugd_derive"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.74", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.35", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0.46", default-features = false, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
darling = "0.20"
